--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
 
   flutter_svg: ^2.0.7
   flutter_layout_grid: ^2.0.3
+  shared_preferences: ^2.1.2
+  sqflite: ^2.2.8+4
+  path: ^1.8.3
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
