--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ version: 0.1.0
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -18,6 +19,7 @@ dependencies:
   sqflite: ^2.2.8+4
   path: ^1.8.3
   path_provider: ^2.0.15
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
