--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.15
   flutter_riverpod: ^2.3.6
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.3
+  firebase_storage: ^11.2.5
 
 dev_dependencies:
   flutter_test:
