--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.3
   firebase_storage: ^11.2.5
+  cr_file_saver: ^0.0.2+1
 
 dev_dependencies:
   flutter_test:
