--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cr_file_saver: ^0.0.2+1
   awesome_notifications: ^0.7.4+1
   flutter_slidable: ^3.0.0
+  observe_internet_connectivity: ^1.0.2
 
 dev_dependencies:
   flutter_test:
