--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   
   # Other utility packages
   cr_file_saver: ^0.0.2+1
+  package_info_plus: ^4.1.0
   awesome_notifications: ^0.7.4+1
   observe_internet_connectivity: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
@@ -47,6 +48,7 @@ flutter:
 
   assets:
     - assets/
+    - fonts/OFL.txt
 
   fonts:
     - family: Manrope
