--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_layout_grid: ^2.0.3
   flutter_slidable: ^3.0.0
+  pie_chart: ^5.3.2
 
   # Data management packages
   path: ^1.8.3
