--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.3
   firebase_storage: ^11.2.5
+  firebase_analytics: ^10.4.4
   
   # Other utility packages
   cr_file_saver: ^0.0.2+1
