--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^4.8.3
   firebase_storage: ^11.2.5
   firebase_analytics: ^10.4.4
+  google_mobile_ads: ^3.0.0
   
   # Other utility packages
   cr_file_saver: ^0.0.2+1
