--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   awesome_notifications: ^0.8.2
   observe_internet_connectivity: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
+  social_share: ^2.3.1
 
 dev_dependencies:
   flutter_test:
