--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,18 +27,18 @@ dependencies:
   flutter_riverpod: ^2.3.6
   
   # Firebase packages
-  firebase_core: ^2.15.0
-  cloud_firestore: ^4.8.3
-  firebase_storage: ^11.2.5
-  firebase_analytics: ^10.4.4
-  google_mobile_ads: ^3.0.0
+  firebase_core: ^2.24.0
+  cloud_firestore: ^4.13.3
+  firebase_storage: ^11.5.3
+  firebase_analytics: ^10.7.2
+  google_mobile_ads: ^4.0.0
   
   # Other utility packages
   url_launcher: ^6.1.12
   file_picker: ^6.1.1
   cr_file_saver: ^0.0.2+1
   package_info_plus: ^5.0.1
-  awesome_notifications: ^0.8.2
+  awesome_notifications: 0.7.4+1
   observe_internet_connectivity: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
   social_share: ^2.3.1
