--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   # Widget packages
   flutter_svg: ^2.0.7
   flutter_layout_grid: ^2.0.3
-  flutter_slidable: ^3.0.0
+  flutter_slidable: ^4.0.0
   pie_chart: ^5.3.2
 
   # Data management packages
@@ -27,18 +27,18 @@ dependencies:
   flutter_riverpod: ^2.3.6
   
   # Firebase packages
-  firebase_core: ^2.24.0
-  cloud_firestore: ^4.13.3
-  firebase_storage: ^11.5.3
-  firebase_analytics: ^10.7.2
-  google_mobile_ads: ^4.0.0
+  firebase_core: ^3.10.1
+  cloud_firestore: ^5.6.2
+  firebase_storage: ^12.4.1
+  firebase_analytics: ^11.4.1
+  google_mobile_ads: ^5.3.0
   
   # Other utility packages
   url_launcher: ^6.1.12
-  file_picker: ^6.1.1
+  file_picker: ^8.1.7
   cr_file_saver: ^0.0.2+1
-  package_info_plus: ^5.0.1
-  awesome_notifications: 0.7.4+1
+  package_info_plus: ^8.1.3
+  awesome_notifications: ^0.10.0
   observe_internet_connectivity: ^1.0.2
   disable_battery_optimization: ^1.1.0+1
   social_share: ^2.3.1
@@ -47,7 +47,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   flutter_native_splash: ^2.3.2
 
 flutter_native_splash:
